# ResumeFlow

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  stale.yml
src/: App.test.tsx  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: analysis_config.json
src-tauri/src/: analysis.rs  config.rs  error.rs  lib.rs  main.rs  parser.rs  render.rs  scraper.rs
src-tauri/src/analysis/: constants.rs  keywords.rs  mod.rs  readability.rs  verbs.rs
src/components/: ActionVerbLinter.tsx  AnalysisPanel.tsx  ErrorBoundary.tsx  Header.tsx  ImportEditWorkspace.tsx  JobDescription.tsx  PagedResumePreview.test.tsx  PagedResumePreview.tsx  PdfPreview.tsx  ReadabilityPanel.tsx  ResumeBuilder.tsx  ResumeEditor.tsx  ResumeImport.tsx  ResumePreview.test.tsx  ResumePreview.tsx  SectionEditor.tsx  Toast.test.tsx  Toast.tsx
src/components/layout/: BuilderField.tsx  FieldLayoutPopover.tsx  PageLayoutPanel.tsx  fieldLayoutConfig.ts
src/hooks/: useResumeImport.ts
src/i18n/: index.ts
src/i18n/locales/: en.json  pl.json  ru.json
src/lib/: docxExport.test.ts  docxExport.ts  layoutSettings.ts  pdfExport.test.ts  pdfExport.ts  resumeParser.test.ts  resumeParser.ts  resumeRenderRequest.test.ts  resumeRenderRequest.ts  tauriError.test.ts  tauriError.ts  typstRender.test.ts  typstRender.ts  utils.test.ts  utils.ts
src/store/: useBuilderStore.test.ts  useBuilderStore.ts  useEditorStore.ts  useResumeStore.ts  useToastStore.ts
src/templates/: resumeTemplates.ts  templateThemes.ts
src/types/: resume.test.ts  resume.ts
