[package]
name = "resumeflow"
version = "0.4.0"
description = "Privacy-first ATS resume optimizer"
authors = []
license = "MIT"
edition = "2021"

[lib]
name = "resumeflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pdf-extract = "0.10.0"
regex = "1"
base64 = "0.22"
unicode-normalization = "0.1"
reqwest = { version = "0.12.0", features = ["rustls-tls"], default-features = false }
scraper = "0.25.0"
tokio = { version = "1.50.0", features = ["full"] }

