[package]
name = "resumeflow"
version = "0.5.0"
description = "Privacy-first ATS resume optimizer"
authors = []
license = "MIT"
edition = "2021"

[lib]
name = "resumeflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
pdf-extract = "0.10.0"
regex = "1"
base64 = "0.22"
unicode-normalization = "0.1"
reqwest = { version = "0.13.2", features = ["rustls"], default-features = false }
scraper = "0.26.0"
tokio = { version = "1.52.1", features = ["full"] }
image = { version = "0.25", default-features = false, features = ["png"] }
typst = "0.14.2"
typst-as-lib = { version = "0.15.5", features = ["typst-kit-fonts", "typst-kit-embed-fonts"] }
typst-pdf = "0.14.2"
typst-render = "0.14.2"

