[package]
name = "resumeflow"
version = "0.5.1"
description = "Privacy-first ATS resume optimizer"
authors = []
license = "MIT"
edition = "2021"

[lib]
name = "resumeflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.11.0", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
pdf-extract = "0.10.0"
regex = "1"
base64 = "0.22"
unicode-normalization = "0.1"
reqwest = { version = "0.13.2", features = ["rustls"], default-features = false }
scraper = "0.26.0"
image = { version = "0.25", default-features = false, features = ["png"] }
typst = "0.14.2"
typst-pdf = "0.14.2"
typst-render = "0.14.2"
tokio = { version = "1.52.1", features = ["sync"] }

[target.'cfg(target_os = "windows")'.dependencies]
typst-as-lib = { version = "0.15.5", features = ["typst-kit-fonts"] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
typst-as-lib = { version = "0.15.5", features = ["typst-kit-fonts", "typst-kit-embed-fonts"] }

[dev-dependencies]
tokio = { version = "1.52.1", features = ["rt"] }

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"
strip = true